About Me page update, Bootstrap Grid alignment fix, Navbar minimisation List elements aligned to the right .nav-link, other stylistic changes.

--- a/homework/HW2-Responsive Portfolio/Master/assets/css/styles.css
+++ b/homework/HW2-Responsive Portfolio/Master/assets/css/styles.css
@@ -16,6 +16,11 @@ html {
   min-height: 100%;
 }
 
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 /* Link Styles */
 a {
   color: rgb(101, 170, 155);
@@ -44,7 +49,7 @@ main {
   /* Typography */
   color: #6b89aa;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-weight: bold;
+  font-size: 30px;
 }
 
 /* NAV START */
@@ -71,6 +76,10 @@ main {
 /* Navbar Collapsed Visual */
 .navbar-toggler{
   border: 0px;
+}
+
+.nav-link {
+  text-align: right;
 }
 
 /* media query for nav background color change */
@@ -143,20 +152,20 @@ main {
 .about-me-header {
   /* Positioning */
   margin-bottom: 33px;
-  font-family: Georgia, Times, "Times New Roman", serif;
 
   /* Typography */
-  font-size: 32px;
-  font-weight: bold;
-  color: #4aaaa5;
-}
+  color: #6b89aa;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
+
+} 
 
 #about-image {
   /* Positioning */
-  float: right;
+  float: left;
 
   /* Box-model */
-  width: 200px;
+  width: 150px;
   margin: 0 20px 10px 0;
 }
 /* END ABOUT-ME PAGE */
